--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
