--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "prop-types": "^15.8.1",
